# Settlers5GameSpeedTrainer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Button.hpp  MemoryManager.hpp
src/: Button.cpp  MemoryManager.cpp  main.cpp
